@startuml
left to right direction
skinparam classAttributeIconSize 0
hide empty methods

package "model" {
  class Feedback <<entity>> {
    - feedback_id  : int
    - customer_id  : int
    - product_id   : int
    - content      : String
    - image_url    : String
    - status       : String
    - created_at   : Timestamp
    + getters/setters()
  }
}

package "db" {
  class DBContext {
    - conn : Connection
    + getConnection() : Connection
  }
}

package "dao" {
  class FeedbackDAO <<dao>> {
    + insert(f: Feedback) : int
  }
  class OrderDAO <<dao>> {
    + hasPurchased(customer_id:int, product_id:int) : boolean
  }
}

package "controller" {
  class FeedbackController <<controller>> {
    - feedbackDAO : FeedbackDAO
    - orderDAO    : OrderDAO
    + doPost(req: HttpServletRequest, resp: HttpServletResponse) : void
  }
}

FeedbackDAO --|> DBContext
OrderDAO    --|> DBContext
FeedbackController ..> FeedbackDAO
FeedbackController ..> OrderDAO
FeedbackDAO ..> Feedback
@enduml
